--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -2,6 +2,8 @@
     flex: 3;
     height: calc(100vh - 60px);
     overflow-y: scroll;
+    position: sticky;
+    top: 60px;
 }
 
 ::-webkit-scrollbar {
@@ -20,12 +22,7 @@
     padding: 20px;
 }
 
-ul {
-    list-style: none;
-}
-
-.sidebar-list-item,
-.sidebar-friend {
+.sidebar-list-item {
     display: flex;
     align-items: center;
     gap: 1em;
@@ -42,12 +39,5 @@ ul {
 }
 
 .sidebar-hr {
-    margin-bottom: 20px 0;
-}
-
-.sidebar-friend-img {
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    object-fit: cover;
+    margin: 20px 0;
 }
