--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -6,6 +6,7 @@
     align-items: center;
     position: sticky;
     top: 0;
+    z-index: 999;
 }
 
 .logo {
@@ -96,5 +97,3 @@
     object-fit: cover;
     cursor: pointer;
 }
-
-
