--- a/src/components/rightbar/rightbar.css
+++ b/src/components/rightbar/rightbar.css
@@ -1,5 +1,5 @@
 .rightbar {
-    flex: 3;
+    flex: 3.5;
 }
 
 .rightbar-wrapper {
@@ -30,4 +30,45 @@
 
 .rightbar-title {
     margin-bottom: 20px;
+    font-size: 18;
+    font-weight: 500;
+}
+
+.rightbar-info {
+    margin-bottom: 30px;
+}
+
+.rightbar-info-item {
+    margin-bottom: 10px;
+}
+
+.rightbar-info-key {
+    font-weight: 500;
+    margin-right: 15px;
+    color: #555;
+}
+
+.rightbar-info-value {
+    font-weight: 300;
+}
+
+.rightbar-followings {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.rightbar-following {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
+.rightbar-following-img {
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+    object-fit: cover;
 }
