--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,10 @@
 *{
     margin: 0;
-    font-family: 'Roboto', sans-serif;;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
+}
+
+ul {
+    list-style: none;
 }
